Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56082

[macOS]: When clicking on the proxy icon it will show an invalid menu if there is no window file path set

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3
    • 5.6.1
    • None
    • macOS 10.11
    • macOS
    • cd081ca96a5387abe36f46a347363e07edcdcd67

    Description

      When clicking on the proxy icon it will show an invalid menu if there is no window file path set. Additionally dragging it will have an incorrect path as these should only be working when a windowFilePath is set.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes